--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^5.2.1"
+    "@studio-freight/lenis": "^1.0.42",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "chroma-js": "^3.1.2",
+    "gsap": "^3.12.7",
+    "lenis": "^1.2.3"
   }
 }
