--- a/.gitignore
+++ b/.gitignore
@@ -4,44 +4,49 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore bundler config.
+# === Rails & Bundler ===
 /.bundle
-
-# Ignore all environment files (except templates).
-/.env*
-!/.env*.erb
-
-# Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
-# Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
-
-# Ignore storage (uploaded files in development and any SQLite databases).
 /storage/*
 !/storage/.keep
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
-
-/public/assets
-
-# Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# === Vite & Node ===
+/public/assets
+/public/vite*
+node_modules
+*.local
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
-# Vite Ruby
-/public/vite*
-node_modules
-# Vite uses dotenv and suggests to ignore local-only env files. See
-# https://vitejs.dev/guide/env-and-mode.html#env-files
-*.local
+# === ENV files ===
+/.env*
+!/.env*.erb
 
-.env*
+# === Éditeurs & OS ===
+.DS_Store
+*.swp
+*.swo
+*.bak
+*.tmp
+*.log
+.idea/
+.vscode/
+
+# === GROS FICHIERS à ignorer ===
+*.zip
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.webm
+*.flv
