--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lenis": "^1.2.3",
     "swiper": "^11.2.6",
     "tailwindcss": "^3.4.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "zod": "^3.24.4"
   }
 }
